--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,9 @@ dependencies {
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.core:core-ktx:1.7.0"
 
-    implementation "androidx.navigation:navigation-runtime-ktx:2.4.0"
+    implementation "androidx.navigation:navigation-runtime-ktx:2.4.1"
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
 }
