--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.4.1"
-    def arch_version = "2.1.0"
     def nav_version = "2.4.1"
     def room_version = "2.4.1"
     def lottieVersion = "3.4.2"
@@ -70,9 +69,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
 
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-runtime:2.4.2"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-ktx:2.4.2"
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.core:core-ktx:1.7.0"
 
